Added css for the class elements to be color green and red. And added the font 'Roboto'

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,15 @@
 button {
     margin: 10px 0px 0px 0px;
 }
+
+.green {
+    color: green;
+}
+
+.red {
+    color: red;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
